--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ sysinfo.txt
 *.unitypackage
 *.log
 3rdYearMobileGame/Logs/shadercompiler-UnityShaderCompiler.exe0.log
+3rdYearMobileGame/UserSettings/EditorUserSettings.asset
+3rdYearMobileGame/Logs/shadercompiler-UnityShaderCompiler.exe0.log
